# YCharts-Django-polls

./: README.md  manage.py  pyproject.toml
.github/workflows/: ci.yaml
djangopolls/: asgi.py  settings.py  urls.py  wsgi.py
polls/: admin.py  models.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
