# ------------------------------ UV Configuration ------------------------------

[project]
name = "django-polls"
version = "0.1.0"
description = "YCharts onboarding app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "django-debug-toolbar>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]

# ----------------------------- Ruff Configuration -----------------------------

[tool.ruff.lint]
# Go to https://docs.astral.sh/ruff/rules/ to see all the available rules
select = ["F", "E", "W", "I", "N", "C90", "ARG"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"djangopolls/settings.py" = ["E501"]
"tests/*" = ["ARG001", "ARG002"]

[tool.ruff.lint.isort]
force-single-line = true
